# bard

./: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bard.rs  config.rs  main.rs
src/components/: Chat.tsx  Content.tsx
src/components/message/: Input.tsx  List.tsx  Message.tsx
src/lib/: settings.ts
src/styles/: chat.scss  index.scss
types/: chat.d.ts  index.d.ts  message.d.ts  settings.d.ts
