[package]
name = "bard"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", features = ['formatting', 'local-offset'] }
dirs = "5.0"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "socks", "stream"] }
reqwest-eventsource = "0.4"
futures-util = "0.3"
url = "2.3"
toml = "0.7"
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
anyhow = "1"
rand = '0.8'
regex = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
